--- a/_posts/2020-04-12-campaign.md
+++ b/_posts/2020-04-12-campaign.md
@@ -3,7 +3,7 @@ layout: post
 permalink: /projectreview1/
 title: '프로젝트 리뷰 - 사회공헌 캠페인'
 date: 2020-04-12 10:30:00 +09:00
-feature: '/img/posts/05/back.png'
+feature: '/img/posts/05/0.png'
 background: '/img/posts/05/back.jpeg'
 categories:
   - review
