5편로고제거

--- a/_posts/2020-04-12-campaign.md
+++ b/_posts/2020-04-12-campaign.md
@@ -69,13 +69,13 @@ PM은 당연히 해당 캠페인을 운영하는 운영사업부가 맡았지만
 
 **한 끼가 두 끼가 되는 기적, 기브링**
 
-![캠페인이미지](/img/posts/05/6.jpg)
+![캠페인이미지](/img/posts/05/6-1.jpg)
 
 제일 핵심이 되는 아이템은 '기브링'이였는데 제로헝거 코너를 선택한 직원들은 ‘기브링’이라 불리는 ‘링’을 식판 위에 올려놓은 뒤 링 안에 음식을 담게 된다. 자연스럽게 평소보다 식사량이 줄어든 음식으로 식사를 해야 하기 때문에 잔반을 남기는 일이 적도록 유도한다. 
 
 고객 경험을 위한 커뮤니케이션 4단계를 설계했다. 
 
-![캠페인이미지](/img/posts/05/5.jpg)
+![캠페인이미지](/img/posts/05/5-1.jpg)
 
 1. 입구기브월 : 입구에 설치된 기브월을 통한 캠페인 인지 
 
