--- a/_posts/2020-04-12-campaign.md
+++ b/_posts/2020-04-12-campaign.md
@@ -12,8 +12,7 @@ tags:
   - CSV캠페인
   - 세계유엔식량계획
   - 사회공헌
-description: 어느날 회사는 내가 회사에 온 유일한 이유였던 마케터라는 직업을 나에게서 빼앗아버렸다. 누군가는 그런 이름따위가 뭐 그렇게 중요하냐고 했지만 나에게는 무엇보다 중요했다. 이제는 진짜 회사를 나가야겠구나 라는 생각이 들었다 그리고 거짓말처럼 딱 그 시기에, 나는 이 프로젝트를 만났고 아직도 여전히 회사에 있다. 
-
+description:세계유엔식량계획과 함께 했던 사회 공헌 캠페인 기획 리뷰 
 ---
 
 ## Marketerview_프로젝트 리뷰 : 사회공헌 캠페인
@@ -28,13 +27,17 @@ description: 어느날 회사는 내가 회사에 온 유일한 이유였던 마
 
 다른 사람들과 조금 다른 점이 있다면, 처음부터 회사는 내게 거쳐가는 터널? 그 이상도 그 이하도 아니였다. 물론 간절하게 원한다고 어필하며 면접보고 입사한건 사실이지만, 뭐 예를 들어 조용히 가늘고 길게 다녀보겠다 라던지 임원이 되겠다는 야망이라던지 정년이 보장되는 안정적인 직장을 가보겠다 라던지 이런걸 바래본 적이 없다. 그저 마케팅이 하고 싶었고 직접 할 돈도 상품도 서비스도 없으니 회사에 간다면 해보고 싶은걸 막연하게 3가지 정도 생각했었다. 
 
-**1. 이윤추구를 목적으로 만들어진 회사라는 조직에서 돈을 펑펑 쓰며 그 돈으로 사회에 도움이 되는 일을 하기**
 
-**2. 그렇게 돈 쓰고 안짤리려면 매출 끝장나게 올려보는 히트 프로모션 기획하기**
+
+**1. 이윤추구를 목적으로 만들어진 회사라는 조직에서 그 돈을 쓰자고 설득하여 사회에 도움이 되는 일을 하기**
+
+**2. 그렇게 돈 쓰고도 안짤리려면 매출 끝장나게 올려보는 히트 프로모션 기획하기**
 
 **3. 회사안팎 상관없이 내 브랜드 만들어보기** 
 
-회사를 다니면서도 항상 잊지 않고자 누가 볼까 조금 더 다듬은 추상적인 워딩으로 다이어리를 바꿀 때마다 맨 첫장에 내용을 적었다. 그러나 어느날 회사는 내가 회사에 온 유일한 이유였던 마케터라는 직업을 나에게서 빼앗아버렸다. 누군가는 그게 뭐 그렇게 중요하냐고 했지만 나에게는 무엇보다 중요했다. 이제는 진짜 회사를 나가야겠구나 라는 생각이 들었다 그리고 거짓말처럼 딱 그 시기에, 나는 이 프로젝트를 하게 되었고 아직도 여전히 회사에 있다. 
+
+
+회사를 다니면서도 항상 잊지 않고자 누가 볼까 조금 더 다듬은 추상적인 워딩으로 다이어리를 바꿀 때마다 맨 첫장에 내용을 적었다. 그러나 어느날 회사는 내가 회사에 온 유일한 이유였던 마케터라는 직업을 나에게서 빼앗아버렸다. 누군가는 그게 뭐 그렇게 중요하냐고 했지만 나에게는 무엇보다 중요했다. 이제는 진짜 회사를 나가야겠구나 라는 생각이 들었다 그리고 거짓말처럼 딱 그 시기에, 나는 이 프로젝트를 하게 되었다.
 
 
 
@@ -50,6 +53,12 @@ description: 어느날 회사는 내가 회사에 온 유일한 이유였던 마
 
 PM은 당연히 해당 캠페인을 운영하는 운영사업부가 맡았지만 내 기준에서 이 캠페인 활동은 마케팅이 숨은 주인공인 프로젝트라고 생각했다. 고객의 마음을 움직여 행동을 유도하고 인지하게 하고 기분 좋게 참여 하게 하는 일이 성공의 핵심요소라고 생각했다. 
 
+고객들은 구내식당의 양질의 식사가 회사가 나에게 주는 복지라고 생각한다. 그 서비스를 이용하는 고객들에게 이건 결코 불이익이 아니라 작은 실천으로 세상에 도움이 되는 일, 너의 혜택이 줄어드는 게 아니라, 건강한 식사다 라는 인식 제고가 필요했다. 
+
+무엇보다 제일 중요한 포인트는 캠페인은 일정기간 일어나는 이벤트성일지 몰라도, 점포는 앞으로도 계속 고객들과의 관계를 유지하고 만족도 높은 서비스를 제공해야 하는 우리의 사업장이라는 점이였다. 
+
+어떻게 하면 고객과의 관계를 해치지 않고, 되려 고객에게 더 좋은 경험이 되도록 설계 할 수 있을까라는 고민을 정말 밤 늦게까지 많이 했던거 같다. 
+
 우리가 설정한 로직은 다음과 같았다. 고객에게 해당 코너에서 식사를 하면 한 끼당 1,000원이 자동적으로 기부가 된다. 그 코너 식수*1,000원으로 기부액을 산출하고 회사 이름으로 기부한다.  캠페인 원리 4가지는 다음과 같았다. 
 
 1. Zero Waste : 낭비를 줄인다. 
@@ -57,23 +66,15 @@ PM은 당연히 해당 캠페인을 운영하는 운영사업부가 맡았지만
 3. 낭비 감소로 인한 환경문제 해결 (CO2배출량 감소)  
 4. 고객은 적정 칼로리 섭취를 통한 건강관리 
 
-고객들은 구내식당의 양질의 식사가 회사가 나에게 주는 복지라고 생각한다. 그 서비스를 이용하는 고객들에게 이건 결코 불이익이 아니라 작은 실천으로 세상에 도움이 되는 일, 너의 혜택이 줄어드는 게 아니라, 건강한 식사다 라는 인식 제고가 필요했다. 
-
-무엇보다 제일 중요한 포인트는 캠페인은 일정기간 일어나는 이벤트성일지 몰라도, 점포는 앞으로도 계속 고객들과의 관계를 유지하고 만족도 높은 서비스를 제공해야 하는 우리의 사업장이다. 
-
-어떻게 하면 고객과의 관계를 해치지 않고, 되려 고객에게 더 좋은 경험이 되도록 설계 할 수 있을까라는 고민을 정말 밤 늦게까지 많이 했던거 같다. 
-
-우리 회사 사옥의 업장 특성은 고단가 오피스 점포였으며 원형트레이에 자율적으로 음식을 담는 구조였다. 이 점에 착안하여 고안했던 아이디어는
-
-
+우리 사옥의 업장 특성은 고단가 오피스 점포였으며 원형트레이에 자율적으로 음식을 담는 구조였다. 이 점에 착안하여 고안했던 아이디어! 
 
 **한 끼가 두 끼가 되는 기적, 기브링**
 
 ![캠페인이미지](/img/posts/05/6-1.jpg)
 
-제일 핵심이 되는 아이템은 '기브링'이였는데 제로헝거 코너를 선택한 직원들은 ‘기브링’이라 불리는 ‘링’을 식판 위에 올려놓은 뒤 링 안에 음식을 담게 된다. 자연스럽게 평소보다 식사량이 줄어든 음식으로 식사를 해야 하기 때문에 잔반을 남기는 일이 적도록 유도한다. 
+제일 핵심이 되는 아이템은 '기브링'이였는데 제로헝거 코너를 선택한 직원들은 ‘기브링’이라 불리는 ‘링’을 식판 위에 올려놓은 뒤 링 안에 음식을 담게 된다. 자연스럽게 평소보다 적은 면적에 담게 되므로 평소 대비 적은 식사량을 담게 되고, 때문에 잔반을 남기는 일이 적도록 유도한다. 
 
-고객 경험을 위한 커뮤니케이션 4단계를 설계했다. 
+고객 경험을 위해 
 
 ![캠페인이미지](/img/posts/05/5-1.jpg)
 
@@ -81,27 +82,29 @@ PM은 당연히 해당 캠페인을 운영하는 운영사업부가 맡았지만
 
    ![캠페인이미지](/img/posts/05/3.jpeg)
 
-2. 기브링이 설치된 트레이에 배식 : 배식받는 동안 커뮤니케이션 메세지 전달 및 링 안에만 담아야하는 챌린지 같은 재미와 기브넘버를 부여하여 재미 선사 
+2. 기브링 제공 : 고객 동선에 메세지 보드 설치 및 링 안에만 담아야하는 챌린지, 당첨될지도 모르는 기브넘버 부여하여 재미 경험 
 
    ![캠페인이미지](/img/posts/05/02.jpg)
 
-3. 기브박스 : 식사를 위해 링을 제거용도 기브박스에 제거 식사 중에도 더 메세지 인지를 위한 박스디자인
+3. 테이블 위 기브박스 : 테이블에 와서, 기브링을 거부감 없이 제거하고 식사 하기 위해 메세지가 적힌 기브박스를 두어 기브링 수거 
 
    ![캠페인이미지](/img/posts/05/05.jpeg)
 
-4. 퇴식기브월 : 나가는 순간 기브넘버 확인 이벤트 참여로 한번 더 메세지 전달 
+4. 퇴식기브월 : 나가는 순간 기브넘버 확인 및 이미지월을 완성하는 스티커 제거 참여로 한번 더 메세지 각인
 
    ![캠페인이미지](/img/posts/05/4.jpg)
 
 **세상을 바꾸는 특별한 한끼 운영** 
 
-기사를 인용해보자면 ""총 1600여 명에 이르는 CJ 임직원들이 해당 캠페인에 참여했으며 한 끼 당 182g에 달하던 임직원 1인당 평균 잔반량은 114g 수준으로 약 37%가량 줄었다."
+기사를 인용해보자면  "총 1600여 명에 이르는 CJ 임직원들이 해당 캠페인에 참여했으며 한 끼 당 182g에 달하던 임직원 1인당 평균 잔반량은 114g 수준으로 약 37%가량 줄었다."
 
-또, 이용자 수 1명당 1000원에 해당하는 기아 퇴치 기금을 조성하겠다는 운영 취지에 따라 캠페인을 통해 마련된 기금은 WFP로 전달될 예정이다. 이는 저개발국가의 기아인구 3000여 명의 굶주림을 하루 동안 해결할 수 있는 금액이다.
+또, 이용자 수 1명당 1000원에 해당하는 기아 퇴치 기금을 조성하겠다는 운영 취지에 따라 캠페인을 통해 마련된 기금은 WFP로 전달되었다. 이는 저개발국가의 기아인구 3000여 명의 굶주림을 하루 동안 해결할 수 있는 금액이다.
 
-4주간의 캠페인은 성공적으로 운영되었다. 그것도 기뻤지만 개인적으로도 의미있었다. 회사돈 펑펑쓰면서 세상에 기여하기! 인터넷 기사도 잔뜩 나고 사내방송도 나오고 심지어 MBN 토요포커스에도 잠시 등장했다. (클릭)
+4주간의 캠페인 파일럿 테스트는 시행착오도 많았지만 성공적으로 운영되었다. 인터넷 기사도 잔뜩 나고 사내방송도 나오고 심지어 MBN 토요포커스에도 잠시 등장했다. 
 
-많은 우여곡절이 있었다. 울기도 했고 순탄하게만 흘러갔다면 거짓말이다. 그런데 이 프로젝트로 나에게 남은 것은 저런 일시적인 성과도 물론 달콤하지 않았다면 거짓말이지만, 진정으로 내가 얻은 것은 사람이라는 생각이 든다. 늦은 밤까지 같이 기획하고 고민하고 보고서를 쓴 마케팅팀 선배님, 내가 기획한걸 표현하느라 고생한 디자이너, 나를 믿고 기획한 대로 운영하게 해준 지점장님 등 많은 사람들이 함께 만들어 낸 일이였기 때문에 더욱 마음에 남는다.  
+(클릭)
+
+저런 보도자료나 성과도 물론 달콤하지 않았다면 거짓말이겠지만, 진짜 얻은 것은 사람이라는 생각이 들었다. 꽤 긴시간 기획하고 진행 과정 속에서 많은 우여곡절이 있었다. 사실 울어보기도 했고 순탄하게만 흘러가지만은 않았지만 항상 함께 해주던 사람들이 있었다. 늦은 밤까지 같이 기획하고 고민했던 마케팅팀 선배님, 내가 기획한걸 천만배 예쁘게 표현하느라 고생한 디자이너, 나를 믿고 기획한 대로 운영하게 해준 지점장님 등 많은 사람들이 함께 만들어 냈던 일이 였기때문에 더욱 마음에 남았다. 
 
 
 
@@ -113,7 +116,7 @@ PM은 당연히 해당 캠페인을 운영하는 운영사업부가 맡았지만
 
 보고 있나, 너랑 한 그 약속 잊지않고 지키려고 열심히 살고있어! 
 
-여러모로 잊을 수 없는 프로젝트였다. 해당 캠페인은 현재도 성황리에 진행중이다! 
+
 
 
 
