--- a/_posts/2020-04-12-campaign.md
+++ b/_posts/2020-04-12-campaign.md
@@ -8,8 +8,8 @@ background: '/img/posts/05/back.jpeg'
 categories:
   - review
 tags:
-  - UN
-  - CSV캠페인
+  - 캠페인
+  - CSV
   - 세계유엔식량계획
   - 사회공헌
 description:세계유엔식량계획과 함께 했던 사회 공헌 캠페인 기획 리뷰 
