--- a/_posts/2020-07-10-youtube1.md
+++ b/_posts/2020-07-10-youtube1.md
@@ -62,13 +62,9 @@ description: 프로젝트 리뷰_유튜브 대장정, 그 시작은 이러했다
 
 내 마음에서 해야겠다 라는 생각이 들었다. 그럼 이제 게임은 새로 시작이였다. 조직의 득실이나 성공여부 당위성보다 여기서 부터는 오로지 내 관점의 게임이기 때문이다. 내가 가진, 혹은 끌어 모을 수 있는 리소스로 이 일을 되게 하려면? 이라고 생각하고 뇌를 다시 가동하여 설계해보기 시작했다.
 
-![유튜브 이미지](/img/posts/10/4.jpeg)
-
 **1단계** 소속 집단 최상위 리더에게 허락 받는다. 거기까지 들고 가기 위해서 거쳐야 하는 중간 문지기들에게도 해야 하는 납득 갈만한 논리를 만든다. 
 
-일단 보고서를 봐주던 선임님은 그래, 유튜브 짱인거 다아는데 왜해야해? 아무리봐도 우리 사업에는 별 도움이 없는거 같아, 왜 해야해? 목적이 뭐야? 
-
-아 목적이 필요하다고? 왜 해야하냐고? 그럼 회사가 해결 해야 하는 과제가 뭐지? 이슈가 뭐지? 그중에 우리팀이나 내가 해결할 수 있는 뭐지? 그거 해줄게, 그 수단으로 이게 필요해 라고 설득하면 되지 않을까? 라는 생각을 했고 결과적으로 그 사이엔 비약이 있고 연결고리가 부족했지만 큰방향은 저렇게 방대하게 설정해갔다. 
+일단 보고서를 봐주던 선임님은 그래, 유튜브 짱인거 다아는데 왜해야해? 아무리봐도 우리 사업에는 별 도움이 없는거 같아, 왜 해야해? 목적이 뭐야? 앗 목적이 필요하다고? 왜 해야하냐고? 그럼 회사가 해결 해야 하는 과제가 뭐지? 이슈가 뭐지? 그중에 우리팀이나 내가 해결할 수 있는 뭐지? 그거 해줄게, 그 수단으로 이게 필요해 라고 설득하면 되지 않을까? 라는 생각을 했고 결과적으로 그 사이엔 비약이 있고 연결고리가 부족했지만 큰방향은 저렇게 방대하게 설정해갔다. 
 
 **2단계**  내가 필요한, 부족한 자원들을 요청하고 모은다. (인력,예산,시간 등등 리소스 득템)
 
@@ -86,7 +82,9 @@ description: 프로젝트 리뷰_유튜브 대장정, 그 시작은 이러했다
 
 
 
-사실 아무도 기대는 안하고 나 조차도 이 리뷰는 어쩌면 '이렇게 하면 망합니다!' 라는 레퍼런스가 될 지라도 써보겠노라 하고 업로드 하는거지만 그래도 이렇게 글을 쓸 수 있는건, 드디어 반년만에 3단계에 왔다. 그 원동력에는 올해 팀 내부적으로 파트제로 개편이 되어서 작년과는 다르게 날뛰는 망아지의 고삐를 잡아줄 든든한 파트장님도 생겼고, 아직은 손발을 맞추느라 매일매일이 조금씩 화도 나고 힘들기도 하지만 그래도 혼자가 아닌 함께 갈 사람들도 모였다. 늘 어디서 다시 충전되는지 나도 궁금하지만 이번에도 있는 힘껏 해보고자 한다. 유튜브는 솔직하게 내 로직이 맞다거나 설득을 잘했기 보다는 타이밍이 맞았다. 코로나19로 비대면이나 디지털이 각광받는 사회 환경도 작용했을거 같고, 유튜브는 명실상부 이제는 필수 채널인거 같다. 또한 언급했듯 새로운 리더로 변한것도 지대한 영향을 끼쳤다고 본다. 역시 타이밍보다 중요한건 없다는 생각, 운칠기삼이라는 인생의 진리를 이렇게 뼈저리게 마주하게 된다.
+사실 이리치이고 저리치이고, 나 조차도 이 리뷰는 어쩌면 '이렇게 하면 망합니다!' 라는 레퍼런스가 될 지라도 써보겠노라 라는 각오하고 업로드 하는거지만 그래도 이렇게 글을 쓸 수 있는건, 드디어 반년만에 3단계에 왔다. 
+
+그 원동력에는 올해 팀 내부적으로 파트제로 개편이 되어서 작년과는 다르게 날뛰는 망아지의 고삐를 잡아줄 든든한 파트장님도 생겼고, 아직은 손발을 맞추느라 매일매일이 조금씩 화도 나고 힘들기도 하지만 그래도 혼자가 아닌 함께 갈 특공대원들도 모였다. 늘 어디서 다시 충전되는지 나도 궁금하지만 이번에도 있는 힘껏 해보고자 한다. 유튜브는 솔직하게 내 로직이 맞다거나 설득을 잘했기 보다는 타이밍이 맞았다. 코로나19로 비대면이나 디지털이 각광받는 사회 환경도 작용했을거 같고, 유튜브는 명실상부 이제는 필수 채널인거 같다. 또한 언급했듯 새로운 리더로 변한것도 지대한 영향을 끼쳤다고 본다. 역시 타이밍보다 중요한건 없다는 생각, 운칠기삼이라는 인생의 진리를 이렇게 뼈저리게 마주하게 된다.
 
 
 
@@ -96,17 +94,17 @@ description: 프로젝트 리뷰_유튜브 대장정, 그 시작은 이러했다
 
 **그렇게 시작된 유튜브 대장정**
 
-**모든 사람들에게 목소리를 주고 세상에 그들을 보여주는 것을 이루고자 존재하는 유튜브라는 채널이 정말 회사에 필요한가?** 이게 정량적으로도 정성적으로도 의미있는 프로젝트인가? 라고 묻는다면 내 답은 '솔직히 모른다, 그냥 해보는거다' 
+**모든 사람들에게 목소리를 주고 세상에 그들을 보여주는 것을 이루고자 존재하는 유튜브라는 채널이 정말 회사에 필요한가?** 이게 들인 비용 대비 효과를 정량적으로도 정성적으로도 측정할 수 있으며 의미있는 프로젝트인가? 라고 묻는다면 솔직히 모른다, 그냥 해보는거다..!
 
 ![유튜브 이미지](/img/posts/10/3.png)
 
-말할 수 있는건 가장 순수하고 솔직했고 신입사원 시절 과제로 적어냈던거 처럼, 업의 특성상 일반 사람들은 알 수 없던 숨겨진 주연들, 구성원들에게 목소리를 주고 세상에 그들을 보여주는 일이 우리가 제공하는 서비스를 조금 더 진정성 있는 서비스로 만들어 주지 않을까? 라는 마음에서 부터 시작된 일이였다는 것 뿐이다.  
+내가 말할 수 있는거라곤 가장 순수하고 솔직했고 신입사원 시절 과제로 적어냈던거 처럼, 업의 특성상 일반 사람들은 알 수 없던 숨겨진 주연들, 구성원들에게 목소리를 주고 세상에 그들을 보여주는 일이 우리가 제공하는 서비스를 조금 더 진정성 있는 서비스로 만들어 주지 않을까? 이 시대가 원하는 진정한 커뮤니케이션이 아닐까? 라는 마음에서 부터 시작된 일이였다는 것 뿐이다.  
 
 
 
 **다음편 예고 : 나에게 영향을 끼친 콘텐츠 리뷰 및 우리 콘텐츠 기획 스토리**
 
-올드미디어를 대체한다는 명분하에 방송가들에서 내놓는 B급 감성으로 자유분방한 콘텐츠들도 매력도 있고 누구나 쉽게 소비하게 되지만, 유튜브의 미션처럼 플랫폼의 특성을 잘 이용하고, 유튜브를 통해 진짜 세상에 그들의 목소리를 내는 콘텐츠들이 내 마음을 움직였다, 특히  소비자와 함께 브랜드를 만드는 새로운 방식의 브랜드의 탄생은 나에게 큰 인사이트였다. 다음편에서는 유튜브 채널 생성 결심의 부싯돌 역할을 해줬던 모티비와 모베러웍스를 리뷰해보고 아직 세상밖으로 나오지 않은 우리채널의 이야기도 해보고자 한다.  Comming soon! 
+올드미디어를 대체한다는 명분하에 방송가들에서 내놓는 B급 감성의 자유분방한 콘텐츠들도 매력도 있고 누구나 쉽게 소비하게 되지만, 유튜브의 기업 미션처럼 플랫폼의 특성을 잘 이용하고, 유튜브를 통해 진짜 세상에 그들의 목소리를 내는 콘텐츠들이 내 마음을 움직였다, 특히  소비자와 함께 브랜드를 만드는 새로운 방식의 브랜드의 탄생은 나에게 큰 인사이트였다. 다음편에서는 유튜브 채널 생성 결심의 부싯돌 역할을 해줬던 모티비와 모베러웍스를 리뷰해보고 아직 세상밖으로 나오지 않은 우리채널의 이야기도 해보고자 한다.  Comming soon! 
 
 
 
