이게맞을까,,

--- a/_posts/2020-04-12-campaign.md
+++ b/_posts/2020-04-12-campaign.md
@@ -13,6 +13,7 @@ tags:
   - 세계유엔식량계획
   - 사회공헌
 description: 세계유엔식량계획과 함께 했던 사회 공헌 캠페인 기획 리뷰 
+content_id: projectreview1
 ---
 
 ## Marketerview_프로젝트 리뷰 : 사회공헌 캠페인
