--- a/_posts/2020-07-10-youtube1.md
+++ b/_posts/2020-07-10-youtube1.md
@@ -13,6 +13,7 @@ tags:
   - 마케팅
   - 유튜브
 description: 프로젝트 리뷰_유튜브 대장정, 그 시작은 이러했다 
+content_id: review4
 ---
 
 ## MarketerviewSeries_ 1. 유튜브 대장정의 시작
