--- a/_posts/2020-04-19-vougle.md
+++ b/_posts/2020-04-19-vougle.md
@@ -13,6 +13,7 @@ tags:
   - 조리공모전
   - B2B마케팅
 description: 당신이 25만명의 점심을 책임집니다, 온라인 조리 공모전 VOUGLE 기획 리뷰 
+content_id: projectreview2
 ---
 
 ## Marketerview_프로젝트 리뷰 : VOUGLE
