--- a/_posts/2020-07-10-youtube1.md
+++ b/_posts/2020-07-10-youtube1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 permalink: /review4/
-title: '프로젝트 리뷰 - 유튜브 채널 생성기'
+title: '프로젝트 리뷰 - 유튜브 1편 대장정의 서막'
 date: 2020-07-10 22:30:00 +09:00
 feature: '/img/posts/10/0.jpg'
 background: '/img/posts/10/0.jpg'
