에세이삭제

--- a/_posts/2020-10-18-essay1.md
+++ b/_posts/2020-10-18-essay1.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-permalink: /essay1/
+permalink: /bookreview1/
 title: '어차피 레이스는 길다-나영석'
 date: 2020-10-18 13:30:00 +09:00
 feature: '/img/posts/14/0.jpg'
 background: '/img/posts/14/0.jpg'
 categories:
-  - essay
+  - review
 tags:
   - 나영석
   - 1박2일
