--- a/_posts/2020-11-15-movie1.md
+++ b/_posts/2020-11-15-movie1.md
@@ -23,11 +23,11 @@ description: 라라랜드와 위플래시를 만든 데이미언 셔젤
 
 데이미언 셔젤은 아카데미 감독상을 받으며 최연소 감독상 수상자가 되었다고 한다. (by. 나무위키) 개봉은 위플래쉬가 먼저했지만 사실 나는 라라랜드로 그를 처음 만났다. 
 
-라라랜드를 보던 날, 그 기억이 너무나도 선명하게 영화같이 남아있다.  무려 2016년 엄청 추웠던 겨울 어느날에, 최종 입사 면접을 끝내고 면접비로 라라랜드 표를 샀었다. 내 인생에도 라이언 고슬링이 있다면 너일거야 라는 생각이 드는 사람과 함께 했던 따뜻한 영화관이, 그 선명한 기억이 내 인생에 라라랜드 같이 황홀한 시절이 있었다면 그 시절이 라라랜드였을 거라 생각한다. 
+라라랜드를 보던 날, 그 기억이 너무나도 선명하게 영화같이 남아있다.  무려 2016년 엄청 추웠던 겨울 어느날에, 최종 입사 면접을 끝내고 면접비로 라라랜드 표를 샀었다. 내 인생에도 라이언 고슬링이 있다면 너일거야 라는 생각이 드는 사람과 함께 했던 따뜻한 영화관이, 그 선명한 기억이 내 인생의 라라랜드 같았다
 
-영화가 어떤 내용일지 아무 기대감도 없이 그저 이 돈을 다 써버리고 싶은 마음 뿐이였던 나는 추위와 긴장이 한번에 녹아버렸고 인생에서 가장 달콤하게 잠들었다. 그러니까 한마디로 모두가 인생 영화라고 하는 그 영화를 보고 나는..졸았다!
+영화가 어떤 내용일지 아무 기대감도 없었고 그저 이 돈을 다 써버리고 싶은 마음 뿐이였다. 추위와 긴장이 한번에 녹아버렸고 모두가 인생 영화라고 하는 그 영화를 보고 나는..졸았다!
 
-깼더니 둘은 헤어졌고 라이언 고슬링의 너무나 아름다운 피아노 선율이 흘렀고 기분좋게 몽롱한 기운에 봤던 라라랜드는 진짜 영화같았고 정확히 어떤 게 공감가서 그런지 설명할 수 없어도 영화 후반부에는 많이 울었던 기억도, 그 여운이 쉽게 가시지 않았던 느낌도 생생히 기억 된다. 
+깼더니 둘은 헤어졌고 라이언 고슬링의 너무나 아름다운 피아노 선율이 흘렀다. 기분 좋게 몽롱한 기운에 봤던 라라랜드는 그 순간은 그리고 그 장면들은 정말 영화같았고 정확히 어떤 게 공감가서 그런지 설명할 수 없어도 영화 후반부에는 많이 울었던 기억도, 그 여운이 쉽게 가시지 않았던 느낌도 생생히 기억 된다. 
 
 
 
@@ -35,11 +35,11 @@ description: 라라랜드와 위플래시를 만든 데이미언 셔젤
 
 -
 
-그렇게 면접비를 줬었던 그 회사가 이제는 월급을 준다. 꿈 많고 패기 넘치던 취준생은 어디갔고 퇴사가 꿈인 김대리가 되었다. 오후 반차 쓰고 혼자 가서 봤던 재개봉한 긴장감을 늦출 수 없는 데이미언 셔젤의 역작, 위플래시를 보고도 이번에도 변함없이 졸았다....! 라라랜드부터 위플래시를 보기까지 내 주변 환경은 정말 많이 변했는데 현실의 고단함에 영화관에서 졸고 있는 난 그대로였다. 
+그렇게 면접비를 줬었던 그 회사가 이제는 월급을 준다. 꿈 많고 패기 넘치던 취준생은 어디갔고 퇴사가 꿈인 김대리가 되었다. 오후 반차 쓰고 재개봉한 위플래시로 데이미언 셔젤은 다시 만났다. 긴장감을 늦출 수 없다는 역작, 위플래시를 보고도 이번에도 변함없이 졸았다....! 라라랜드부터 위플래시를 보기까지 내 주변 환경은 정말 많이 변했는데 현실의 피로를 못이기고 영화관에서 졸고 있는 난 그대로였다. 
 
-또 깼더니, 피자 먹으러 갈래?고백하던 너드는 어디로 가고 주인공 앤드류는 여자친구에게 최고의 드러머가 되겠다며 이별을 고했다. 그리고 미친듯이 연습만 한다. 메트로놈 몇일지 궁금하게 만드는 박자감의 카라반 연주가 이어진다. 이 감독은 왜 맨날 커플들을 꿈을 핑계로 헤어지게 하며 또 음악은 뭐 또 이렇게 좋냐 싶었다. 
+또 깼더니, 피자 먹으러 갈래?고백하던 너드는 어디로 가고 주인공 앤드류는 여자친구에게 최고의 드러머가 되겠다며 이별을 고했다. 그리고 미친듯이 연습만 한다. 메트로놈 몇일지 궁금하게 만드는 박자감의 카라반 연주가 이어진다. 이 감독은 왜 맨날 커플들을 꿈을 핑계로 헤어지게 하며 또 음악은 뭐 또 이렇게 좋나 
 
-위플래시 역시도 다보고 나서 뭔가 띵----한 느낌과 함께 뭔지 모를 기분만이 남았다. 라라랜드때와 분명히 다른 기분이였지만 결론은 매일 현실의 고단함에 보다가 잠들지만 그를 좋아한다. 그의 작품을 좋아한다.  
+위플래시 역시도 다보고 나서 뭔가 띵----한 느낌과 함께 뭔지 모를 기분만이 남았다. 라라랜드때와 분명히 다른 기분이였다. 그래서 결론은 두번이나 잠들었지만 그를 좋아한다. 그의 작품을 좋아한다.  
 
 *세상에서 가장 쓸 데 없는 말이 '그만하면 잘했어(good job)'야 - 플래처*
 
@@ -49,9 +49,9 @@ description: 라라랜드와 위플래시를 만든 데이미언 셔젤
 
 영화관 티켓박스 알바생에게 찌질하고도 수줍게 피자먹으러 가자고 고백하는 전형적인 미국 너드 느낌의 앤드류는 라라랜드의 라이언 고슬링과 찌질함은 비슷한듯 하나 결이 전혀 다르다.
 
-사실 최고의 음악학교에 입학한 나름 대단한 청년 앤드류는 최고의 드러머가 되겠다는 일념 하나로 열심히 하지만 날고 기는 명문학교 안에서 기회가 많이 주어지지 않는다. 그러다 어느날 플래처는 그의 광기를 읽어내고 그를 일종의 스카웃해오게 되면서 그를 키우겠다며 채찍질하기 시작한다. 
+사실 최고의 음악학교에 입학한 나름 대단한 청년 앤드류는 최고의 드러머가 되겠다는 일념 하나로 열심히 하지만 날고 기는 명문 학교 안에서 기회가 많이 주어지지 않는다. 그러다 어느날 플래처라는 광기 넘치는 교수가 그의 야망을 읽어내고 스카웃해오게 되면서 그를 키우겠다며 채찍질하기 시작한다. 
 
-그리고 그런 혹독함 덕분에 그는 많이 성장한다. 그 과정에서 미친놈들의 면모를 톡톡히 보여주며 사고가 나도 드럼을 치고 둘다 학교에서 쫓겨나기도 하고 또 그걸 알고 복수도 하고 인생의 우여곡절을 겪지만 결국 두 미친놈은 결국 서로의 광기를 알아보고 최고의 10분이라 불리우는 격정적인 무대로 영화는 끝이 난다. 
+그리고 그런 혹독함 덕분에 그는 많이 성장한다. 그 과정에서 미친놈들의 면모를 톡톡히 보여주며 사고가 나도 드럼을 치고 둘다 학교에서 쫓겨나기도 하고 또 그걸 알고 복수도 하고 우여곡절을 겪지만 결국.. 두 미친놈은 결국 서로의 그러한 미친 모습을 알아보고 최고의 10분이라 불리우는 격정적인 무대로 영화는 끝이 난다. 
 
 
 
@@ -59,25 +59,23 @@ description: 라라랜드와 위플래시를 만든 데이미언 셔젤
 
 나중에 검색하고 알았지만 감독인 데이미언 셔젤은 학창 시절 진짜 드러머 였던 적이 있었다고 한다. 보는 내내도 사실 이미 감독이 드러머였던 적이 있었을거라 생각을 했다. 그런 생각이 들만큼 드럼에 대해 디테일하게 표현되었고 작품이 견고하고 단단하다는 느낌을 받았다. 역시 경험은 무시 못하는 자산이라는 깨달음을 한번 더 얻는다. 
 
-데이미언 셔젤이 드럼을 칠 때 제일 두려웠던 게 박자를 놓치지 않는 거라고 했다. 그 모습이 앤드류의 연습에도 많이 반영되어 있다. 학창시절에 재즈 드러머를 꿈꾸었고, 음악 전문 학교인 프린스턴 고등학교에서 스튜디오 밴드 재즈 드러머로 지원, 매우 엄격한 스승에게 드럼을 배웠지만, 뛰어나지 않다는 혹평만 듣고 드러머는 그만두었다고 한다. 그 엄격한 스승이 플레처 교수의 모티브가 되었다고..! 그리고 라라랜드와 위플래시에서도 재즈에 대한 그의 견해를 아낌없이 표출한다. 마이너하지만 매력적인 그런 음악이라고 
+데이미언 셔젤이 드럼을 칠 때 제일 두려웠던 게 박자를 놓치지 않는 거라고 했다. 그 모습이 앤드류의 연습에도 많이 반영되어 있다. 셔젤은 학창시절에 재즈 드러머를 꿈꾸었고, 음악 전문 학교인 프린스턴 고등학교에서 스튜디오 밴드 재즈 드러머로 지원, 매우 엄격한 스승에게 드럼을 배웠지만, 뛰어나지 않다는 혹평만 듣고 드러머는 그만두었다고 한다. 그 엄격한 스승이 플레처 교수의 모티브가 되었다고..! 그리고 라라랜드와 위플래시에서도 재즈에 대한 그의 애정과 견해를 아낌없이 표출한다. 마이너하지만 매력적인 그런 음악이라고 
 
 
 
-위플래시 라라랜드 두 영화가 끝나고 많은 생각이 든건 사실이지만 이번에 본 위플래시를 보는 내내는 기분이 그다지 좋지 않았다. 극 중에 앤드류나 플래처의 광기 어린 대결(?), 사람을 극한으로 이끌고 가는 그런 상황에 몰입하게 되어 나도 모르게 생기는 거북함, 안타까움이 내 가치관과 잘 맞지 않았다. 그러나 또 더 솔직하게는 나를 그렇게 만드는 그의 연출에 감탄이 절로 나왔다. 드럼만으로 날 구렁텅이에 빠뜨린 이 미친 몰입감에는 정말 박수를 보낸다. 
+위플래시 라라랜드 두 영화 모두 끝나고 많은 생각이 든건 사실이지만 이번에 본 위플래시를 보는 내내는 기분이 그다지 좋지 않았다. 극 중에 앤드류나 플래처의 광기 어린 대결(?)같은 모습들, 사람을 극한으로 이끌고 가는 그런 상황에 몰입하게 되어 나도 모르게 생기는 거북함, 안타까움이 있었다. 그러나 또 더 솔직하게는 나를 그렇게 만드는 그의 연출에 감탄이 절로 나왔다. 드럼만으로 날 어둠의 구렁텅이에 빠뜨린 이 미친 몰입감에는 정말 박수를 보낸다. 
 
 만드는 사람들의 업적은 보는 이로 하여금 한번쯤 생각 해보게끔 하는 데에 있지 않을까, 내가 만든 것을 통해 물음표를 던져주고 보는 이로 하여금 다시 한번 해석할 여지를 주는 것, 공백을 주는 것은 쉬운 일이 아니다. 고수의 영역이다. 
 
-자신이 없고 확신이 없이 그저 열심히 하다보면 덕지 덕지 눈덩이처럼 커진다. 그래도 아쉽고 부족한거 같아서 힘을 못 뺀다. 그럼 결국 전하고자 하는 것이 눈에 띄지 않게 된다. 내가 좋아하는 책 제목 처럼,  힘빼기야 말로 기술이다. 
+자신이 없고 확신이 없이 그저 열심히 하다보면 덕지 덕지 눈덩이처럼 커진다. 정체가 뭐였는지 보이지 않게 된다. 그래도 아쉽고 부족한거 같아서 힘을 못 뺀다. 그럼 결국 전하고자 하는 것이 눈에 띄지 않게 된다. 내가 좋아하는 책 제목 처럼, 힘빼기야 말로 기술이다. 
 
 
 
 -
 
-그래서 2020년에는 나도 힘을 빼보자 다짐했는데 어느덧 2020년이 다갔다. 벌써 가을이다. 요새 가을이라는 계절이, 계절이 변하는 모습이 이렇게 아름다웠는지 새삼 놀란다. 여태 나름 스물 여덟번의 가을을 지냈을 텐데 왜 여지껏 나는 알지 못했을까, 
+그래서 2020년에는 나도 힘을 빼보자 다짐했는데 어느덧 2020년이 다갔다. 벌써 가을이다. 가을이라는 계절이, 계절이 변하는 모습이 이렇게 아름다웠는지 새삼 놀란다. 여태 나름 스물 여덟번의 가을을 지냈을 텐데 왜 여지껏 나는 알지 못했을까, 
 
 이번 가을이 유난히 아름다웠던걸까 아니면 나도 모르는 사이에 내가 정말 별로라고 생각했던 앤드류처럼 앞만 보고 달렸던건 아닐까 돌아보게 되는 요즘이다. 
 
-전에도 적은거 같지만 많은 생각을 하게 해주는 것들을 사랑한다. 그게 책이든 영화든 사람이든 그렇지만 확고해진 내 취향은 미친놈보다는 또라이인걸로! 
-
-앞으로도  또 잠들지 모르겠지만 그래도 데이미언 셔젤의 영화는, 그가 들려주는 음악은 돈내고 꼭 영화관에서 보고 싶다.  
+전에도 적은거 같지만 많은 생각을 하게 해주는 것들을 사랑한다. 그게 책이든 영화든 사람이든! 위플래시로 확고해진 내 취향은 격정적인 미친놈보다는 열정 있는 또라이인걸로!  앞으로도  또 잠들지 모르겠지만 그래도 데이미언 셔젤의 영화는, 그가 들려주는 음악은 돈내고 꼭 영화관에서 보고 싶다.  
 
